--- a/trunk/svn/faq.html
+++ b/trunk/svn/faq.html
@@ -33,16 +33,16 @@
 <li><a href="#why">ÎªÊ²Ã´»áÓÐÕâÑùÒ»¸öÏîÄ¿£¿</a></li>
 <li><a href="#collab">SubversionÊÇË½ÓÐÈí¼þÂð?ÎÒÌýËµËüÊÇÊôÓÚCollabNet¹«Ë¾µÄ¡£</a></li> 
 <li><a href="#stable">SubversionÓÃÔÚÎÒµÄÏîÄ¿ÉÏÊÇ·ñ×ã¹»ÎÈ¶¨£¿</a></li>
-<li><a href="#interop">SubversionµÄ¿Í»§¶Ë/·þÎñÆ÷Ð­Í¬¹¤×÷µÄ²ßÂÔÊÇÔõÑùµÄ£¿ </a></li>
+<li><a href="#interop">SubversionµÄ¿Í»§¶Ë/·þÎñÆ÷ÔÚÐ­Í¬¹¤×÷Ê±µÄ²ßÂÔÊÇÔõÑùµÄ£¿ </a></li>
 <li><a href="#portability">Subversion¿ÉÒÔÔËÐÐÔÚÄÄÐ©²Ù×÷ÏµÍ³ÉÏ£¿
  </a></li> 
 <li><a href="#filesystem">ËùÓÐËüµÄÒ»ÇÐÊÇ·ñÊÇÒ»ÖÖÐÂµÄÎÄ¼þÏµÍ³£¿±È·½Ëµext2ÎÄ¼þÏµÍ³£¿</a></li> 
-<li><a href="#server-requirements">ÎªÁËÔËÐÐÒ»¸öSubversion·þÎñÆ÷£¬ÄÄÖÖÓ²¼þÊÇÎÒËùÐèÒªµÄ£¿</a></li>                                              
+<li><a href="#server-requirements">ÎªÁËÔËÐÐÒ»¸öSubversion·þÎñÆ÷£¬ÄÄÐ©Ó²¼þÊÇÎÒËùÐèÒªµÄ£¿</a></li>                                              
 <li><a href="#apache-extension">ÎÒÌýËµSubversionÊÇApacheÏîÄ¿µÄÀ©Õ¹£¿ÎÒÊÇ·ñÐèÒªApacheÀ´×ö·þÎñÆ÷ÄØ£¿</a></li> 
 <li><a href="#need-apache">ÊÇ·ñÒâÎ¶×ÅÎÒ±ØÐëÊ×ÏÈ°²×°Apache²ÅÄÜÊ¹ÓÃSubversion£¿</a></li> 
 <li><a href="#multiple-apachim">ÎÒÏÖÔÚËùÔËÐÐµÄÊÇApache 1.x£¬µ«ÊÇÎÒ²»ÄÜ½ö½öÎªÁËÖ§³ÖSubversion°æ±¾¿â¶ø½«Æä×ª»»³ÉApache 2.0¡£ÕâÊÇ·ñÒâÎ¶×ÅÎÒ²»ÄÜÊ¹ÓÃSubversion·þÎñÆ÷£¿</a></li>  
 <li><a href="#feature-x">ÎªÊ²Ã´²»ÏóSCMÏµÍ³YÄÇÑùÀ´×öX£¿</a></li>
-<li><a href="#globalrev">ÎªÊ²Ã´È«²¿µÄ¿â¶¼Ê¹ÓÃÏàÍ¬µÄ°æ±¾ºÅÂë£¿ÎÒÏëÈÃÎÒµÄÃ¿Ò»¸ö¹¤³Ì¶¼ÓÐÆä×Ô¼ºµÄ°æ±¾ºÅÂë¡£</a></li>
+<li><a href="#globalrev">ÎªÊ²Ã´È«²¿µÄ¿â¶¼Ê¹ÓÃÏàÍ¬µÄÐÞ¶©°æ±¾ºÅÂë£¿ÎÒÏëÈÃÎÒµÄÃ¿Ò»¸ö¹¤³Ì¶¼ÓÐÆä×Ô¼ºµÄÐÞ¶©°æ±¾ºÅÂë¡£</a></li>
 <li><a href="#changesets">SubversionÓÐÃ»ÓÐ±ä¸ü¼¯£¿</a></li>
 <li><a href="#release">ÏÂÒ»¸ö°æ±¾Ê²Ã´Ê±ºò·¢²¼£¿</a></li>
 <li><a href="#symlinks">SubversionÊÇ·ñÖ§³ÖÁ´½Ó£¨symlinks£©£¿</a></li>
@@ -203,7 +203,7 @@ Software Guidelines</a>¡£»»¾ä»°Ëµ£¬Äã¿ÉÒÔËæÐÄËùÓûµÄÈ¥ÏÂÔØ£¬ÐÞ¸Ä£¬»òÕßÖØÐÂ·¢²¼ÐÂµ
 <div class="h3" id="stable" title="stable">
 <h3>SubversionÓÃÔÚÎÒµÄÏîÄ¿ÉÏÊÇ·ñ×ã¹»ÎÈ¶¨£¿</h3>
 
-<p>ÊÇµÄ£¬¾ø¶Ô¿ÉÒÔ¡£ËüÊÇÒÑ¾­×¼±¸ºÃ½øÈë»Æ½ðÊ±¶ÎµÄ²úÆ·¡£</p>
+<p>ÊÇµÄ£¬¾ø¶Ô¿ÉÒÔ¡£ËüÊÇÒ»¿îÒÑ¾­×¼±¸ºÃ½øÈë»Æ½ðÊ±¶ÎµÄ²úÆ·¡£</p>
 
 <p>Subversion´Ó2000Äê¿ªÊ¼¿ª·¢£¬ÔÚÒ»ÄêÖ®ºó³ÉÎªÒ»¸ö×Ô×ãÖ´ÐÐ(self-hosting)µÄÏîÄ¿¡£ÔÚÖ®ºóµÄÒ»Äê£¬µ±ÎÒÃÇ½«Æä³ÆÎª"alpha"°æ±¾µÄÊ±ºò£¬SubversionÒÑ¾­±»ºÜ¶àµÄ¸öÈË¿ª·¢ÈËÔ±ËùÊ¹ÓÃ£¬²¢È·Êµ·¢»ÓÁË×÷ÓÃ¡£ÔÚÄÇÖ®ºó£¬ÓÐÁ½Äê¶àµÄÊ±¼ä±»ÓÃÀ´½øÐÐBug×·×Ù(bugfixing)ºÍÔöÇ¿ÎÈ¶¨ÐÔ(stabilization)£¬Ö±µ½ÎÒÃÇ·¢²¼ÁË1.0°æ±¾¡£´ó¶àÊýµÄÆäËüÏîÄ¿¿ÉÄÜ¶¼»á°Ñ²úÆ·µÄ¡°1.0¡±°æ±¾½Ð×öÔçÆÚ°æ±¾£¬µ«ÊÇÎÒÃÇ¹ÊÒâµÄ¾¡¿ÉÄÜ³¤µÄÍÆ³ÙÁËÕâ¸ö°æ±¾µÄ·¢²¼¡£ÎÒÃÇÒâÊ¶µ½ºÜ¶àÈËÔÚËûÃÇ×î³õÊ¹ÓÃÁËSubversionÖ®ºóÒ»Ö±ÔÚµÈ´ý1.0°æ±¾µÄ·¢²¼£¬²¢ÇÒ¶ÔÕâ¸öÒâÒå·Ç·²µÄ°æ±¾ÓÐ×ÅÌØ±ðµÄÆÚ´ý£¬ËùÒÔÎÒÃÇÔÚÕâÑùÒ»¸ö°æ±¾ÉÏÓÃÁËºÜ¶àµÄÊ±¼ä¶ø²»ÖÁÓÚÈÃËûÃÇÊ§Íû¡£</p>
 
@@ -1841,7 +1841,7 @@ http://svn.haxx.se/users/archive-2004-03/0488.shtml
 
 
 <div class="h3" id="no-author" title="no-author">
-<h3>ÎªÊ²Ã´ÔÚÎÄ¼þÔÚÍ¨¹ýApache£¨ra_dav£©±»Ìá½»ºÍµ¼ÈëÊ±£¬SVNµÄÈÕÖ¾Ëµ¡°(no author)¡±¿</h3>
+<h3>ÎªÊ²Ã´ÔÚÎÄ¼þÔÚÍ¨¹ýApache£¨ra_dav£©±»Ìá½»ºÍµ¼ÈëÊ±£¬SVNµÄÈÕÖ¾Ëµ¡°(no author)¡±?/h3>
 
 <p>Èç¹ûÄãÔÚApacheÉÏ¿ªÆôÁËÄäÃûÓÃ»§µÄÐ´È¨ÏÞµÄÊ±ºò£¬Apache·þÎñÆ÷¾Í²»»áÏòsvn¿Í»§¶ËÑ¯ÎÊÓÃ»§Ãû£¬¶øÊÇÖ±½Ó²»¾­¹ýÑéÖ¤¾ÍÔÊÐíÖ´ÐÐÐ´²Ù×÷¡£ÒòÎªSubversion²»ÖªµÀË­×öÁËÕâÐ©²Ù×÷£¬ÈÕÖ¾ÖÐÕâÐ©²Ù×÷ÐÅÏ¢¾Í±ä³ÉÏÂÃæÕâÑùÁË£º</p>
 
